--- a/style.css
+++ b/style.css
@@ -8,11 +8,19 @@ h3 {
 #games
 {
   text-align: center;
-  background-color: aqua;
+  background-color: black;
   border-radius: 10px;
   display: inline-block;
-  border: 5px dashed blue;
+  border: 5px dashed orange;
 
+}
+.contacts
+{
+    background-color: orange;
+    border-radius: 10px;
+    border: 5px dashed black;
+    padding-bottom: 10px;
+    margin-bottom: 5%;
 }
 .contacts li a
 {
